# forge

./: .gitignore  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml  publish.yml  release.yml
commands/: __init__.py  docker.py  helpers.py  info.py  init.py
core/: __init__.py  __version__.py  config_reader.py  project_generator.py
core/generators/: README.md  alembic.py  orchestrator.py  response.py  structure.py
core/generators/configs/: __init__.py  base.py  env.py  gitignore.py  pyproject.py  readme.py
core/generators/deployment/: __init__.py  base.py  docker_compose.py  dockerfile.py  dockerignore.py
core/generators/templates/: __init__.py  base.py
core/generators/templates/app/: app.py  (+13 more)
core/templates/enums/: redis_prefix.py
core/templates/interfaces/: entity.py  service.py  service_singleton.py  str_enum.py
core/templates/wrappers/: router_wrapper.py  service_wrapper.py
core/utils/: README.md  __init__.py  file_operations.py  project_config.py
docs/: changelog.md  conf.py  index.md  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: config-reader.md  generator-decorator.md  orchestrator.md
docs/architecture/: generator-system.md  overview.md
docs/developer-guide/: adding-features.md  creating-generators.md  development-setup.md
docs/getting-started/: first-project.md  installation.md  quickstart.md
docs/user-guide/: authentication.md  best-practices.md  celery-tasks.md  cli-commands.md  configuration.md  database.md  deployment.md  redis-caching.md  testing.md
scripts/: release.sh  test_build.sh  update_version.py
site/: 404.html  index.html  sitemap.xml
site/api/config-reader/: index.html
site/architecture/generator-system/: index.html
site/architecture/overview/: index.html
site/changelog/: index.html
site/search/: search_index.json
tests/: __init__.py
ui/: __init__.py  colors.py  components.py  logo.py
(+37 files in other folders)
