[project]
name = "forge-fastapi"
version = "0.1.0"
description = "A modern FastAPI project scaffolding CLI tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["fastapi", "cli", "scaffolding", "generator", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.21.0",
    "rich>=14.0.0",
    "requests>=2.31.0",
    "questionary>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/forge"
Documentation = "https://github.com/yourusername/forge#readme"
Repository = "https://github.com/yourusername/forge"
Issues = "https://github.com/yourusername/forge/issues"

[project.scripts]
forge = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["commands", "core", "ui"]
py-modules = ["main"]

[tool.uv.workspace]
members = []
